# mining

./: .env.example  .gitignore  DATA_NOTES.md  LICENSE  README.md  debug_response.json  pyproject.toml  requirements.txt  test_query.http
data/: errors.jsonl
docs/superpowers/specs/: 2026-06-13-llm-eval-design.md  2026-06-13-mining-pipeline-design.md  2026-06-13-mining-pipeline-plan.md  2026-06-13-ragas-eval-design.md
eval/: __init__.py  config.py  evaluate.py  ground_truth.json
eval/results/: eval_report.json
llm/: __init__.py  client.py  config.py
pipeline/: __init__.py  config.py  dedup.py  embedder.py  processor.py  run.py
pipeline/crawlers/: base.py  news_crawler.py  policy_crawler.py  price_crawler.py
serve/: __init__.py  app.py  config.py  generator.py  reranker.py  retriever.py  router.py
tests/: test_crawlers.py  test_dedup.py  test_processor.py
