[project]
name = "mining-pipeline"
version = "0.1.0"
description = "矿业新闻+政策+价格三源聚合管线"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.6",
    "lxml>=5.0",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "tqdm>=4.60",
    "charset-normalizer>=3.0",
    "ragas>=0.3.0",
    "datasets>=3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-vertexai>=1.0",
    "pytest>=9.0.3",
    "pypdf>=6.13.2",
]

[project.scripts]
mining-pipeline = "pipeline.run:cli"
mining-server = "serve.app:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "serve*", "eval*", "llm*"]

[tool.uv]
package = true
link-mode = "copy"
